--- a/index.html
+++ b/index.html
@@ -49,21 +49,27 @@
       <div class="som">
         <img class="somimg" src="./images//music-icon.png" alt="">
         <br>
-        <p>
-           Millions of Songs </p> There are millions of songs on Spotify
+        <p class="textgreen">
+          Millions of Songs </p> There are millions of
+        <br>
+        songs on Spotify
       </div>
 
       <div class="nota">
         <img class="imgnota" src="./images//high-quality-icon.png" alt="">
         <br>
-        <p> HD Music </p>
-        Listen to music as if you were listening live
+        <p class="textgreen"> HD Music </p>
+        Listen to music as if you
+        <br>
+        were listening live
       </div>
 
       <div class="cel">
         <img class="celimg" src="./images//devices-icon.png" alt="">
         <br>
-        <p> Stream Everywhere </p> Stream music on your smartphone, tablet or computer
+        <p class="textgreen"> Stream Everywhere </p> Stream music on your <br> smartphone, tablet or
+        <br>
+        computer
       </div>
 
 
@@ -74,9 +80,32 @@
     <br>
     <br>
 
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <div class="lastpage">
+
+      <div class="titlelast">
+
+        <p class="title"> It’s as yeezy as Kanye West. </p>
+
+      </div>
+
+      <div class="boxlast">
+        <div class="textlastpage">
+          <p class="sub-title"> Search </p>
+          <p> Know what you want to listen to? Just search and hit play. </p>
+          <p class="sub-title"> Browse
+          <p> Check out the latest charts, brand new releases and great playlists for right now. </p>
+          <p class="sub-title"> Discover </p>
+          <p> Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio. </p>
+        </div>
+        <div>
+          <img class="img-spotify" src="./images/spotify-icon-white.png" alt="">
+        </div>
+        <div>
+        <img class="img-device" src="./images/spotify-app.jpg" alt="">
+      </div>
+      </div>
+    </div>
+
   </div>
   </div>
 </body>
