--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
       <div class="boxlast">
         <div class="textlastpage">
           <p class="sub-title"> Search </p>
-          <p> Know what you want to listen to? Just search and hit play. </p>
+          <p class="sub-text"> Know what you want to listen to? Just search and hit play. </p>
           <p class="sub-title"> Browse
-          <p> Check out the latest charts, brand new releases and great playlists for right now. </p>
+          <p class="sub-text"> Check out the latest charts, brand new releases and great playlists for right now. </p>
           <p class="sub-title"> Discover </p>
-          <p> Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio. </p>
+          <p class="sub-text"> Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio. </p>
         </div>
         <div>
           <img class="img-spotify" src="./images/spotify-icon-white.png" alt="">
